--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,3 +7,7 @@ canvas {
 body {
   font-family: "Comic Sans MS", "Courier New", monospace;
 }
+
+input {
+  font-family: "Comic Sans MS", "Courier New", monospace;
+}
