--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,7 @@ canvas {
   background-image: url("images/background.png");
   background-repeat: no-repeat;
   background-size: 1200px 800px;
+  border: 5px solid #000;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
 
 input {
   font-family: "Comic Sans MS", "Courier New", monospace;
+  font-size: 12px;
 }
 
 .controlsBox {
@@ -23,8 +25,22 @@ input {
   padding: 1em;
 }
 
+.controlsBox > div > p {
+  width: 65px;
+}
+
+.controlsBox > div > input {
+  width: 60px;
+}
+
 #screenSplit {
+  background-color: #eaeaea;
   display: grid;
   grid-template-columns: 65% 35%;
+  padding: 1em;
+}
+
+#screenSplit > div > p {
+  background-color: #ccc;
   padding: 1em;
 }
