--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,16 +2,36 @@ canvas {
   background-image: url("images/background.png");
   background-repeat: no-repeat;
   background-size: 1200px 800px;
-  border: 5px solid #000;
+  border: 5px solid #333;
 }
 
 body {
   font-family: "Comic Sans MS", "Courier New", monospace;
+  background-color: #cff;
 }
 
 input {
-  font-family: "Comic Sans MS", "Courier New", monospace;
   font-size: 12px;
+  font-family: "Comic Sans MS", "Courier New", monospace;
+  background-color: #aff;
+  border: 2px solid #333;
+}
+
+button {
+  width: 100%;
+  height: 100px;
+  font-size: 30px;
+  font-family: "Comic Sans MS", "Courier New", monospace;
+  background-color: #0ad;
+  border: #333 0.5em solid;
+}
+
+button:hover {
+  background-color: #0ef;
+}
+
+button:pressed {
+  background-color: #aff;
 }
 
 .controlsBox {
@@ -21,8 +41,9 @@ input {
 }
 
 .controlsBox > div {
-  background-color: #ddd;
+  background-color: #0ad;
   padding: 1em;
+  border: 0.5em solid #333;
 }
 
 .controlsBox > div > p {
@@ -34,13 +55,13 @@ input {
 }
 
 #screenSplit {
-  background-color: #eaeaea;
+  background-color: #aff;
   display: grid;
   grid-template-columns: 65% 35%;
   padding: 1em;
 }
 
 #screenSplit > div > p {
-  background-color: #ccc;
+  background-color: #0ad;
   padding: 1em;
 }
